--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/python,pycharm
+# Created by https://www.gitignore.io/api/python,pycharm,virtualenv
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
@@ -163,4 +163,18 @@ ENV/
 # mkdocs documentation
 /site
 
-# End of https://www.gitignore.io/api/python,pycharm
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Mm]an
+[Ss]cripts
+[Tt]cl
+pyvenv.cfg
+pip-selfcheck.json
+
+# End of https://www.gitignore.io/api/python,pycharm,virtualenv
