--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - "pip install -r requirements.txt"
   - "pip install pylint"
 script:
-  - "pylint --errors-only"
+  - "pylint --errors-only spainmeterbot.py"
